<resources>
    <string name="app_name">PUP Security</string>
    <string name="map_key">AIzaSyBqHuznFzbna08WM1xvAgT399ZO7T35T14</string>
    <string name="user_information">User Information</string>
    <string name="check_otp">Check OTP</string>
    <string name="_16_00_4_01_2019">16:00 4-01-2019</string>
    <string name="_91_7355565559">+91 7355565559</string>
    <string name="client_name">Client Name</string>
    <string name="guard_name">Guard Name</string>
    <string name="save">save</string>
    <string name="user_phone_number">User Phone Number</string>
    <string name="user_name">User Name</string>
    <string name="guard_phone_number">Guard Phone Number</string>
    <string name="sos_alert_list">SOS ALERT LIST</string>
    <string name="no_recent_sos_alert">No Recent SOS Alert</string>
    <string name="submit">Submit</string>
    <string name="user">User</string>
    <string name="guard">Guard</string>
    <string name="enter_your_real_name">Enter Your Real Name</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_one_time_password">Enter One Time Password</string>
    <string name="verify_number">Verify Number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_your_phone_number_to_verify_nyour_account">Enter your phone number to verify \n your account</string>
    <string name="registration">Registration</string>
    <string name="send_sos">Send SOS</string>
    <string name="sos_alerts">SOS ALERTS</string>
    <string name="no_alert">No Alert</string>
    <string name="_1">1</string>
    <string name="active_guards">ACTIVE GUARDS</string>
    <string name="_20">20</string>
    <string name="map">Map</string>
    <string name="sos">SOS</string>
    <string name="admin">Admin</string>
    <string name="sos_history">SOS History</string>
    <string name="users_list">USERS LIST</string>
    <string name="guard_list">GUARD LIST</string>
    <string name="admin_list">ADMIN LIST</string>
    <string name="you_have_currently_disabled_the_location_services_hence_you_will_be_now_be_considered_as_offline_as_per_punjabi_university_security_application">You have currently disabled the location services hence you will be now be considered as offline as per punjabi university security application.</string>
</resources>
