<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_object"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:elevation="3dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="phone_register.json"
            app:lottie_loop="true"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:layout_margin="10dp"
            app:lottie_speed="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registration"
                android:id="@+id/title_text"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_margin="10dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_phone_number_to_verify_nyour_account"
                android:textColor="@color/colorPrimaryText"
                android:textSize="12sp"
                android:textAlignment="center"
                android:layout_margin="5dp"
                android:id="@+id/sub_text"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:id="@+id/number_lay"
            android:visibility="visible"
            android:background="@drawable/rounded_btn"
            android:backgroundTint="#fff"
            android:elevation="2dp"
            android:padding="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_mobile_number"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryText"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="14sp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="5dp"
                android:textColorHint="@color/colorSecondaryText"
                android:inputType="phone"
                android:background="@drawable/rounded_border_btn"
                android:id="@+id/phone_number_view"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_btn"
                android:text="@string/verify_number"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:textSize="14sp"
                android:textColor="#fff"
                android:elevation="4dp"
                android:backgroundTint="@color/colorAccent"
                android:layout_gravity="center"
                android:id="@+id/get_otp_btn"/>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:visibility="gone"
                android:layout_gravity="center"
                android:id="@+id/progress_bar"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:id="@+id/otp_lay"
            android:visibility="gone"
            android:background="@drawable/rounded_btn"
            android:backgroundTint="#fff"
            android:elevation="2dp"
            android:padding="20dp"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_one_time_password"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryText"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="14sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:textColorHint="@color/colorSecondaryText"
                android:inputType="phone"
                android:background="@drawable/rounded_border_btn"
                android:id="@+id/otp_view"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/rounded_btn"
                android:text="@string/verify_otp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:textSize="14sp"
                android:textColor="#fff"
                android:elevation="4dp"
                android:backgroundTint="@color/colorAccent"
                android:layout_gravity="center"
                android:id="@+id/check_otp_btn"/>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:visibility="gone"
                android:layout_gravity="center"
                android:id="@+id/progress_bar_otp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:id="@+id/info_lay"
            android:visibility="gone"
            android:background="@drawable/rounded_btn"
            android:backgroundTint="#fff"
            android:elevation="2dp"
            android:padding="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_real_name"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryText"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:textColorHint="@color/colorSecondaryText"
                android:background="@drawable/rounded_border_btn"
                android:id="@+id/user_name_view"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:id="@+id/role_lay"
                android:visibility="gone"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_border_btn"
                    android:text="@string/guard"
                    android:textSize="14sp"
                    android:textColor="@color/colorSecondaryText"
                    android:layout_margin="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:elevation="4dp"
                    android:layout_gravity="center"
                    android:id="@+id/guard_btn"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_border_btn"
                    android:text="@string/user"
                    android:textSize="14sp"
                    android:textColor="@color/colorSecondaryText"
                    android:layout_margin="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:elevation="4dp"
                    android:layout_gravity="center"
                    android:id="@+id/user_btn"/>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/rounded_btn"
                android:text="@string/submit"
                android:textSize="14sp"
                android:textColor="#fff"
                android:layout_margin="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:elevation="4dp"
                android:backgroundTint="@color/colorAccent"
                android:layout_gravity="center"
                android:id="@+id/save_info_btn"/>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:visibility="gone"
                android:layout_gravity="center"
                android:id="@+id/progress_bar_info"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>